codama-macros/tests/codama_attribute/type_directive/double_type.fail.rs
use codama::codama;

#[codama(type = (number(u32), public_key))]
pub struct Test;

fn main() {}
